--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.11.0",
-    "ws": "^8.13.0"
+    "ws": "^8.13.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
